bynkc/tests/fixtures/positive/19_let_inferred/input.bynk
commons test {
  fn double(n: Int) -> Int {
    let x = n + n
    x
  }
}
