bynkc/tests/fixtures/negative/11_duplicate_function/input.bynk
commons demo {
  fn run(x: Int) -> Int { x }
  fn run(y: Int) -> Int { y + 1 }
}
